# neuralnets_intro

./: .gitignore  Cargo.toml  create_data.py  justfile
data/: main.csv
src/: claps.rs  main.rs  pt1.rs  pt2.rs
