[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
ndarray = "0.16.1"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
plotters = { version = "0.3.7", default-features = false, features = ["ab_glyph", "line_series", "svg_backend"] }
