[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
plotters = { version = "0.3.7", default-features = false, features = ["ab_glyph", "line_series", "svg_backend"] }
